# pdx

./: .gitignore  LICENSE  README.md  makefile  pyproject.toml
demos/advanced_agent/: __init__.py
demos/advanced_agent/templates/: 0_system.default.yaml  1_user.jinja  2_assistant.jinja  2_user.jinja  3_assistant.jinja  3_user.jinja  4_assistant.jinja  5_assistant.jinja  7_assistant.jinja  7_user.jinja  8_user.jinja
demos/chat_agent/: __init__.py  config.yaml
demos/chat_agent/templates/: 0_system.jinja  1_user.jinja  2_user.defaults.yaml
demos/chat_agent/tests/: test_1.yaml
demos/text_agent/: __init__.py  config.yaml
demos/text_agent/templates/: 1_prompt.defaults.yaml
demos/text_agent/tests/: test_1.yaml
examples/: modular.py  refactor.py  run.py
examples/advanced_agent/: config.yaml
examples/advanced_agent/templates/: 0_system.jinja  1_assistant.jinja  4_user.jinja  5_user.jinja  6_assistant.jinja  6_user.jinja  8_assistant.jinja
examples/advanced_agent/tests/: test_1.yaml
examples/chat_agent/: __init__.py  config.yaml
examples/chat_agent/templates/: 1_assistant.jinja  2_user.jinja
examples/text_agent/: __init__.py
examples/text_agent/templates/: 1_prompt.jinja
src/pdx/: __init__.py  cli.py  exceptions.py  logger.py  metadata.py  settings.py
src/pdx/agent/: __init__.py  completer.py  config.py  metadata.py  (+4 more)
tests/: async_model.py  test_agent.py  test_agent_cache.py  test_in_memory_cache.py  test_prompt.py  test_prompt_chain.py
tests/archive/: -async-model.py  -completions.py  -test-scaffold.py
tests/assets/: prompt_template.jinja
(+68 files in other folders)
