[tool.poetry]
name = "pdx"
version = "0.6.0"
description = "Prompt Engineering and Dev-Ops toolkits. A faster way to build and manage applications powered by Language Models."
keywords = ["prompt", "LLM", "prompt engineering", "dev-ops", "observability", "apps"]
authors = ["Adithya Krishnan <krishsandeep@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
packages = [{include = "pdx", from = "src"}]

[tool.poetry.scripts]
pdx = "pdx.cli:main"

[tool.poetry.dependencies]
python = ">=3.7"
click = "^8.1.3"
jinja2 = "^3.1.2"
pyyaml = "^6.0"
jsonschema = "^4.17.3"
pydantic = "^2.1.1"
regex = "^2023.6.3"
aiohttp = "^3.8.4"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"
pytest = "^7.3.2"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
